--- a/Task3.3_Frame/catalogue.html
+++ b/Task3.3_Frame/catalogue.html
@@ -5,104 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalogue</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        /* General Styles */
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(to right, #6dd5ed, #2193b0);
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        /* Header Styles */
-        .header {
-            text-align: center;
-            margin: 20px 0;
-        }
-
-        .header h1 {
-            font-size: 2.5rem;
-            color: #fff;
-        }
-
-        .header p {
-            font-size: 1.2rem;
-            color: #f8f8f8;
-        }
-
-        /* Catalogue Container */
-        .catalogue-container {
-            width: 90%;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        /* Book Container */
-        .book-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            gap: 20px;
-        }
-
-        /* Book Item */
-        .book-item {
-            background: #fff;
-            border-radius: 10px;
-            overflow: hidden;
-            width: 300px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .book-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-        }
-
-        .book-item img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-
-        .book-details {
-            padding: 15px;
-            text-align: left;
-        }
-
-        .book-details h3 {
-            font-size: 1.5rem;
-            color: #333;
-        }
-
-        .book-details p {
-            font-size: 1rem;
-            margin: 5px 0;
-            color: #555;
-        }
-
-        /* Add to Cart Button */
-        .add-to-cart {
-            background: #2193b0;
-            color: #fff;
-            border: none;
-            width: 100%;
-            padding: 10px;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .add-to-cart:hover {
-            background: #197b92;
-        }
-    </style>
+    <link rel="stylesheet" href="catalogue.css">
 </head>
 
 <body>
