--- a/Task3.3_Frame/topframe.html
+++ b/Task3.3_Frame/topframe.html
@@ -18,7 +18,7 @@
                 <li><a href="home.html" target="bottomRightFrame">Home</a></li>
                 <li><a href="login_page.html" target="bottomRightFrame">Login</a></li>
                 <li><a href="RegistrationForm.html" target="bottomRightFrame">Registration</a></li>
-                <li><a href="catalouge.html" target="bottomRightFrame">Catalogue</a></li>
+                <li><a href="catalogue.html" target="bottomRightFrame">Catalogue</a></li>
             </ul>
         </nav>
     </div>
