--- a/Task5_Image_Repitation/no_repeat.html
+++ b/Task5_Image_Repitation/no_repeat.html
@@ -29,7 +29,7 @@
 <body>
     <div class="center-box">
         <h2>Hello, World!</h2>
-        <p>This is a centered box.</p>
+        <p>This is a centered box for no_repeat.html.</p>
     </div>
 </body>
 </html>
