--- a/Task5_Image_Repitation/space.html
+++ b/Task5_Image_Repitation/space.html
@@ -13,22 +13,22 @@
             height: 10vh;
             margin: 0; /* Removes default margin around the body */
         }
-    .center-box {
-        width: 300px;
-        background-color: #f0f0f0;
-        border: 1px solid #ccc;
-        padding: 20px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        .center-box {
+            width: 300px;
+            background-color: #f0f0f0;
+            border: 1px solid #ccc;
+            padding: 20px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
 }
     </style>
 </head>
 <body>
     <div class="center-box">
         <h2>Hello, World!</h2>
-        <p>This is a centered box.</p>
+        <p>This is a centered box for space.html.</p>
     </div>
 </body>
 </html>
