Task 09 All Done

--- a/Task5_Image_Repitation/Task2.html
+++ b/Task5_Image_Repitation/Task2.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab 5- Task 02</title>
-    <link rel="stylesheet" href="Style.css">
-  </head>
-  <body>
-    <h1>All-in-One Page</h1>
-
-    <section>
-      <h2>Styles for link</h2>
-      <p>To open GOOGLE Website:</p>
-      <a href="https://google.com">Google</a>
-    </section>
-
-  </body>
+<html>
+<head>
+    <title>Styled Links</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Styled Links</h1>
+  <p>These links will be styled using CSS classes.</p>
+    <div class="link-container">
+        <a href="https://www.Google.com">Google Link</a>
+        <a href="https://www.Youtube.com">Youtube Link</a>
+        <a href="https://www.Geekforgeeks.com">GFG Link</a>
+    </div>
+</body>
 </html>
