--- a/Prac.html
+++ b/Prac.html
@@ -5,15 +5,21 @@
         My first web page
     </title>
     <style>
-        
+        h2{
+            color: red;
+        }
+        h4{
+            color: blue;
+        }
     </style>
 </head>
 <body>
     <h1>This is H1 heading</h1>
     <h2>This is H2 heading</h2>
-    <h3 style="color: red;">This is H3 heading</h3>
+    <h3>This is H3 heading</h3>
     <h4>This is H4 heading</h4>
     <h5>This is H5 heading</h5>
     <h6>This is H6 heading</h6>
 </body>
 </html>
+
