--- a/Prac.html
+++ b/Prac.html
@@ -2,22 +2,27 @@
 <html>
 <head>
     <title>
-        My first web page
+        To-Do List
     </title>
     <style>
-        h2{
+        body {
+            background-color: yellow;
+        }
+        h1{
             color: red;
-        }
-        h4{
-            color: blue;
-        }
-        body{
-            background-color: lightblue;
         }
     </style>
 </head>
 <body>
-    <h1>This is H1 heading</h1>
+    <h1>To-Do List for Today</h1>
+
+    <ol>
+        <li>Exercise</li>
+        <li>Buy groceries</li>
+        <li>Prepare Presentation</li>
+        <li>Respond to mails</li>
+        <li>Pay Bills</li>
+    </ol>
     
 </body>
 </html>
