--- a/Prac.html
+++ b/Prac.html
@@ -8,22 +8,52 @@
         body {
             background-color: yellow;
         }
-        h1{
+        h1 {
+            text-align: center;
             color: red;
         }
+        ol{
+            color: blue;
+        }
+        th{
+            color:aqua
+        }
+        td{
+            color: green;
+        }
+        
     </style>
 </head>
 <body>
     <h1>To-Do List for Today</h1>
 
-    <ol>
+    <ol start="5" reversed>
         <li>Exercise</li>
         <li>Buy groceries</li>
         <li>Prepare Presentation</li>
         <li>Respond to mails</li>
         <li>Pay Bills</li>
     </ol>
-    
+    <caption style="color: blue">
+        Student Information
+    </caption>
+    <table border="1">
+        <tr>
+            <th>S.No.</th>
+            <th>Name</th>
+            <th>Grades</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>John</td>
+            <td>A</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Cera</td>
+            <td>C</td>
+        </tr>
+    </table>
 </body>
 </html>
 
