--- a/!DOCTYPE.html
+++ b/!DOCTYPE.html
@@ -3,18 +3,21 @@
 <head>
     <title>My first web page</title>
     <style>
-        body {
-            background-color: lightblue;
+        h1{
+            text-align: center;
         }
-        caption {
-            color: blue;
+        table{
+            border-collapse: separate;
         }
-        th{
-            color: red;
+        td{
+            border: 1px solid black;
+            padding: 10px;
+            align-items: center;
         }
     </style>
 </head>
 <body>
+    <!--
     <table border="1">
         <caption>Student Information</caption>
         <tr>
@@ -33,6 +36,24 @@
             <td>C</td>
         </tr>
     </table>
+    -->
+
+
+    <caption>Images<caption>
+    <table border="3">
+        <tr>
+            <td><img src="Images/AICTC_logo.webp" width="100%"></td>
+            <td><img src="Images/aktu_logo.jpg" width="100%"></td>
+        </tr>
+        <tr>
+            <td colspan="2"><img src="Images/aktu_logo.jpg" width="100%"></td>
+        </tr>
+        <tr>
+            <td><img src="Images/EE.jpg" width="100%"></td>
+            <td><img src="Images/naac.jpeg" width="100%"></td>
+        </tr>
+    </table>
+
 </body>
 </html>
 
