--- a/!DOCTYPE.html
+++ b/!DOCTYPE.html
@@ -14,6 +14,27 @@
             padding: 10px;
             align-items: center;
         }
+        
+a:link {
+    color: pink;
+    background-color: maroon;
+}
+
+a:visited {
+    color: blue;
+    background-color: pink;
+}
+
+a:hover {
+    color: white;
+    background-color: #3498db;
+}
+
+a:active {
+    color: yellow;
+    background-color: #f0f0f0;
+}
+
     </style>
 </head>
 <body>
@@ -54,6 +75,8 @@
         </tr>
     </table>
 
+
+    <a href="https://www.google.com/">Google</a>
 </body>
 </html>
 
