--- a/Prac.html
+++ b/Prac.html
@@ -54,6 +54,11 @@
             <td>C</td>
         </tr>
     </table>
+
+
+   <a href="https://www.google.com/">
+        <img src="Images/AICTC_logo.webp" width="100">
+   </a>
 </body>
 </html>
 
