--- a/Task10_JS/formValidation.html
+++ b/Task10_JS/formValidation.html
@@ -32,22 +32,37 @@
             var pWord=document.getElementById("password").value;
             var CpWord=document.getElementById("conformpassword").value;
 
+            var namePattern = /^[A-Za-z]+$/;
+
             if (name == "" || pWord == "" || CpWord == "")
             {
                 alert("All fields are mandatory!!!");
+                return false;
             }
             else if(name.length < 6){
-                alert("Length should not less than 6 character.");
+                alert("Name should not be less than 6 character."); //In Question
+                return false;
             }
-            else if(is){
-                alert("Length should not less than 6 character.");
+            else if(!namePattern.test(name)){
+                alert("Name should contain alphabets only.");   //In Question
+                return false;
             }
+            else if(pWord.length < 6){
+                alert("Password length should not be less than 6 character.");  //In Question
+                return false;
+            }
+            else if(CpWord != pWord){
+                alert("Conform Password and Password should be same.");
+                return false;
+            }
+            else
+                return true ;
         }
     </script>
 
-    <form class="form" action="submit.html" onsubmit="validation()">
+    <form class="form" action="submit.html" onsubmit="return validation()">
         <label>Name:</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name" placeholder="Only characters allowed." required>
         <br><br>
         
         <label>Password:</label>
