--- a/Task10_JS/submit.html
+++ b/Task10_JS/submit.html
@@ -3,19 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-    body {
-        background-color: antiquewhite;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-    }
-    </style>
+    <title>Submit</title>
 </head>
-<body>
-    <h1>Your Response have been submitted</h1>
+<body style="background-color: lightgreen; text-align: center; padding: 50px; font-size: xx-large;">
+    <h1>Thank You!</h1>
+    <p>Your submission has been received.</p>
+    <p>We will get back to you soon.</p>
+    <a href="form.html" style="font-size: 20px; color: blue; text-decoration: none;">Return to Form</a>
 </body>
 </html>
