--- a/JS/newTask.html
+++ b/JS/newTask.html
@@ -1,36 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Task</title>
     <style>
-        .box{
+        .box {
             margin: 15% auto;
             border: 5px solid;
-            width: 225px;
+            width: 175px;
             height: 225px;
             padding: auto;
             display: flex;
             justify-content: center;
             align-items: center;
-
+            background-color: antiquewhite;
         }
     </style>
 </head>
+
 <body>
-<div class="box">
-    <form>
-        <label>Choice</label><br>
-        <input type="radio" name="choice" value="option1" id="choice1">Red<br>
-        <input type="radio" name="choice" value="option2" id="choice2">Blue<br>
-        <input type="radio" name="choice" value="option3" id="choice3">Green<br>
-        <input type="radio" name="choice" value="option4" id="choice4">Yellow<br>
-        <input type="radio" name="choice" value="option5" id="choice5">Brown<br>
-        <input type="radio" name="choice" value="option6" id="choice6">Black
-        <br><br>
-        <input type="submit" value="Submit">
-    </form>
-</div>
+    <script>
+        function checkbox() {
+            var ch1 = document.getElementById("choice1").value;
+            var ch2 = document.getElementById("choice2").value;
+            var ch3 = document.getElementById("choice3").value;
+            var ch4 = document.getElementById("choice4").value;
+            var ch5 = document.getElementById("choice5").value;
+            var ch6 = document.getElementById("choice6").value;
+
+            ch1.addEventListener("change", function (event) {
+                if (event.target.checked) {
+                    alert("Red is selected");
+                }
+            });
+
+            ch2.addEventListener("change", function (event) {
+                if (event.target.checked) {
+                    alert("Blue is selected");
+                }
+            });
+
+            ch3.addEventListener("change", function (event) {
+                if (event.target.checked) {
+                    alert("Green is selected");
+                }
+            });
+
+            ch4.addEventListener("change", function (event) {
+                if (event.target.checked) {
+                    alert("Yellow is selected");
+                }
+            });
+
+            ch5.addEventListener("change", function (event) {
+                if (event.target.checked) {
+                    alert("Brown is selected");
+                }
+            });
+
+            ch6.addEventListener("change", function (event) {
+                if (event.target.checked) {
+                    alert("Black is selected");
+                }
+            });
+        }
+    </script>
+    <div class="box">
+        <form>
+            <label>Choice</label><br />
+            <input type="checkbox" name="choice" value="option1" id="choice1" />Red<br>
+            <input type="checkbox" name="choice" value="option2" id="choice2" />Blue<br>
+            <input type="checkbox" name="choice" value="option3" id="choice3" />Green<br>
+            <input type="checkbox" name="choice" value="option4" id="choice4" />Yellow<br>
+            <input type="checkbox" name="choice" value="option5" id="choice5" />Brown<br>
+            <input type="checkbox" name="choice" value="option6" id="choice6" />Black <br><br>
+            <input type="submit" value="Submit" />
+        </form>
+    </div>
 </body>
+
 </html>
